Update markdown body parsing

--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -8,13 +8,13 @@
     {% include foundation-nav.liquid %}
 
     <hr>
-    
+        
     {% include header.liquid %}
 
     <hr>
 
     <main>
-      <article class="github-markdown">
+      <article class="markdown-body">
         {{ content }}
       </article>
     </main>
