--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -13,5 +13,7 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
+  <link rel="icon" href="https://brand.publiccode.net/logo/mark-128w128h.png">
+
   <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
