--- a/_includes/foundation-nav.liquid
+++ b/_includes/foundation-nav.liquid
@@ -3,7 +3,12 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 1rem;
+    flex-wrap: wrap;
+  }
+  @media only screen and (min-width:400px) {
+    nav.foundation-nav {
+      padding: 1rem;
+    }
   }
 
   nav.foundation-nav a:link, header a:visited {
@@ -19,14 +24,17 @@
     flex: 1;
     text-decoration: none;
   }
+  @media only screen and (min-width:400px) {
+    nav.foundation-nav a.logo-mark {
+      font-size: 2em;
+    }
+  }
   nav.foundation-nav a.logo-mark>img {
-    height: 4em;
-    margin-right: 1em;
+    height: 2em;
+    margin-right: 0.5em;
   }
   nav.foundation-nav a.logo-mark>p {
-    font-size: 2em;
     font-weight: bold;
-    min-width: 10em;
     margin: 0;
   }
 </style>
