--- a/_includes/foundation-nav.liquid
+++ b/_includes/foundation-nav.liquid
@@ -41,7 +41,7 @@
 
 <nav class="foundation-nav">
   <a href="https://publiccode.net/" title="Homepage of the Foundation For Public Code" class="logo-mark">
-    <img src="https://brand.publiccode.net/logo/mark.svg">
+    <img src="https://brand.publiccode.net/logo/mark.svg" alt="The mark of the Foundation For Public Code looks like a little greek temple, or government building, in a hexagon">
     <p>Foundation For Public Code</p>
   </a>
   <a href="https://about.publiccode.net/" title="About of the Foundation For Public Code">About</a>
