More responsive headers

--- a/_includes/foundation-nav.liquid
+++ b/_includes/foundation-nav.liquid
@@ -24,9 +24,14 @@
     flex: 1;
     text-decoration: none;
   }
-  @media only screen and (min-width:400px) {
+  @media only screen and (min-width:500px) {
     nav.foundation-nav a.logo-mark {
       font-size: 2em;
+    }
+  }
+  @media only screen and (min-width:400px) and (max-width:500px) {
+    nav.foundation-nav a.logo-mark {
+      font-size: 1.5em;
     }
   }
   nav.foundation-nav a.logo-mark>img {
