--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -4,7 +4,12 @@
 
   header .site-title {
     padding: 1.5em 2rem;
-    font-size: 2em;
+    font-size: 1.5em;
+  }
+  @media only screen and (min-width:400px) {
+    header .site-title {
+      font-size: 2em;
+    }
   }
   @media only screen and (min-width:700px) {
     header .site-title.home {
