Wrap the footer

--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -4,6 +4,7 @@
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
+    flex-wrap: wrap;
     padding: 1rem;
   }
 
