Broader and simpler design of the back sheet

--- a/_includes/foundation-nav.liquid
+++ b/_includes/foundation-nav.liquid
@@ -5,10 +5,16 @@
     align-items: center;
     flex-wrap: wrap;
     padding-bottom: 1rem;
+    background: none;
   }
   @media only screen and (min-width:400px) {
-    nav.foundation-nav, nav.foundation-nav ul {
+    nav.foundation-nav {
       padding: 1rem;
+    }
+  }
+  @media only screen and (min-width:64em) {
+    nav.foundation-nav {
+      padding: 1rem 4em;
     }
   }
 
