Add an responsive menu
Also a major refactor of the stylesheet.

--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -3,7 +3,7 @@
 
   {% include head.liquid %}
 
-  <body>
+  <body class="{% if page.toc != false and site.toc == true or page.toc == true %}with-toc{% endif %} {% if site.show_navigation == true %}with-site-nav{% endif %}">
 
     {% include foundation-nav.liquid %}
 
