--- a/_includes/main.liquid
+++ b/_includes/main.liquid
@@ -1,7 +1,8 @@
-<main class="{% if page.toc != false and site.toc == true or page.toc == true %}with-toc{% endif %} {% if site.show_navigation == true %}with-site-nav{% endif %}">
+<main>
   {% if site.show_navigation == true %}
       
     <nav id="site-nav">
+      <input type="checkbox" id="show-site-nav"></input><label for="show-site-nav">Menu</label>
       {% include navigation.liquid context="/" %}
     </nav>
 
@@ -10,17 +11,19 @@
     <article class="markdown-body">
       {{ content }}
     </article>
-    {% if site.github.repository_url %}
-    <div class="edit-links">
-      <!-- The default branch is {% for repo in site.github.public_repositories %}{% if repo.name == site.github.repository_name %}{% assign default_branch = repo.default_branch %}{% endif %}{% endfor %}{{ default_branch }}, while site.github.source.branch is {{ site.github.source.branch }} -->
-      <a href="{{ site.github.repository_url }}/edit/{{ default_branch }}/{{ page.path }}">{% include github-pr.svg %} Improve this page.</a>
-      <a href="{{ site.github.repository_url }}/issues/new?body=I'd like to report an issue in `{{ page.path }}`">{% include github-issue.svg %} File an Issue</a>
-    </div>
-    {% endif %}
   </section>
 
-  {% if page.toc != false and site.toc == true or page.toc == true %}
-    {% include toc.liquid html=content h_min=2 sanitize=true class="table-of-contents" %}
-  {% endif %}
+  <section class="sidebar">
+    {% if page.toc != false and site.toc == true or page.toc == true %}
+      {% include toc.liquid html=content h_min=2 sanitize=true class="table-of-contents" %}
+    {% endif %}
+    {% if site.github.repository_url %}
+      <ul class="edit-links">
+        <!-- The default branch is {% for repo in site.github.public_repositories %}{% if repo.name == site.github.repository_name %}{% assign default_branch = repo.default_branch %}{% endif %}{% endfor %}{{ default_branch }}, while site.github.source.branch is {{ site.github.source.branch }} -->
+        <li><a href="{{ site.github.repository_url }}/edit/{{ default_branch }}/{{ page.path }}">{% include github-pr.svg %} Improve this page.</a></li>
+        <li><a href="{{ site.github.repository_url }}/issues/new?body=I'd like to report an issue in `{{ page.path }}`">{% include github-issue.svg %} File an Issue</a></li>
+      </ul>
+    {% endif %}
+  </section>
 
 </main>
