--- a/_includes/navigation.liquid
+++ b/_includes/navigation.liquid
@@ -1,6 +1,6 @@
 {% capture html %}
 <ul>
-  {% assign pages = site.pages | sort: "path" | sort: "order" %}
+  {% assign pages = site.pages | sort: "title" | sort: "order" %}
   {% for node in pages %}
     
     {% unless node.title == nil or node.hidden == true or node.path == '404.md' %}
@@ -10,16 +10,13 @@
       
       {% if current == include.context %}
         <li>
-          <a href="{{ site.baseurl }}{{ node.url }}" class="{% if page.url == node.url %}active{% endif %}">{{ node.title }}</a> 
-          {% if node.path contains 'index.' %}
-            IS INDEX {{ node.dir }}
-          {% endif %}
+          <a href="{{ node.url }}" class="{% if page.url == node.url %}active{% endif %}">{{ node.title }}</a> 
         </li>
       {% endif %}
 
       {% if node.path contains 'index.' %}
         {% if index_current == include.context %}
-          <li><a href="{{ site.baseurl }}{{ node.url }}" class="{% if page.url == node.url %}active{% endif %}">{{ node.title }}</a>
+          <li><a href="{{ node.url }}" class="{% if page.url == node.url %}active{% endif %}">{{ node.title }}</a>
             {% include navigation.liquid context=node.url %}
           </li>
         {% endif %}
