--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="{{ "/assets/style.css" | prepend: site.baseurl | prepend: site.url }}">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  {% feed_meta %}
 
   <link rel="icon" href="https://brand.publiccode.net/logo/mark-128w128h.png">
 
