--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -22,7 +22,7 @@
           {% endif %}
         {% endfor %}
         {% if authors_file != true %}<a href="https://publiccode.net/">
-          {{ site.copyright | default: 'Foundation For Public Code' }}
+          {{ site.copyright | default: 'Foundation for Public Code' }}
         </a>{% endif %}
         {% if authors_file %}<a href="{{ site.baseurl }}/AUTHORS.html">
           {{ site.copyright | default: ' The Authors' }}
