--- a/assets/style.css
+++ b/assets/style.css
@@ -395,6 +395,7 @@ main .edit-links a svg {
 }
 .metadata h3 {
   margin-top: 0;
+  text-transform: capitalize;
 }
 .metadata p {
   margin: .5em 0 0 0;
