--- a/_includes/metadata.liquid
+++ b/_includes/metadata.liquid
@@ -5,8 +5,8 @@
   <table class="metadata">
     {% if page.type %}<tr><th>{{page.type}}</th></tr>{% endif %}
     {% if page.explains %}<tr><td>Explains:</td><td class="explains">{{page.explains}}</td></tr>{% endif %}
-    {% if page.audience %}<tr><td>For:</td><td class="audience">{{page.audience}}</td></tr>{% endif %}
-    {% if page.author %}<tr><td>By:</td><td class="author">{{page.author}}</td></tr>{% endif %}
+    {% if page.audience %}<tr><td>Audience:</td><td class="audience">{{page.audience}}</td></tr>{% endif %}
+    {% if page.author %}<tr><td>Author:</td><td class="author">{{page.author}}</td></tr>{% endif %}
     {% if page.expires %}<tr class="{% if date < currentDate %}expired{% else %}not-expired{% endif %}"><td>Expires:</td><td class="expires">{{ page.expires | date: "%-d %B %Y" }} ({{page.expires}})</ttd></td>{% endif %}
   </table>
 {% endif %}
