Add blog link to foundation-nav.liquid

--- a/_includes/foundation-nav.liquid
+++ b/_includes/foundation-nav.liquid
@@ -5,6 +5,7 @@
   </a>
   <ul>
     <li><a href="https://about.publiccode.net/" title="About of the Foundation for Public Code">About</a>
+    <li><a href="https://blog.publiccode.net/" title="The Blog for Public Code">Blog</a>
     <li><a href="https://projects.publiccode.net/" title="Projects">Projects</a>
   </ul>
 </nav>
